Solucionado warning de LocaleConfig.java